Noteworthy changes in version 2.5.12 (unreleased)
-------------------------------------------------


  Release-info: https://dev.gnupg.org/T7756


Noteworthy changes in version 2.5.11 (2025-07-30)
-------------------------------------------------

  * gpg: Fix a segv in key signing with notations introduced in
    2.5.10.  [T7754]

  * agent: Fix for smartcard decryption with Brainpool keys.  [T7709]

  Release-info: https://dev.gnupg.org/T7743


Noteworthy changes in version 2.5.10 (2025-07-25)
-------------------------------------------------

  * gpg: Add a notation with version information to signatures.  See
    doc/DETAILS for, well, details.  [rG11d3a83b04]

  * gpgv: New option --print-notation.  [rGe3cc410003]

  * gpgsm: Fix caching of the trustlist's flags.  [T7738]

  * agent: Fix for smartcard decryption returning x-coordinate only.
    [T7709]

  * agent: Another fix for a regression with unknown curves and ssh.
    See also 2.5.4.  [rG55db12472f]

  * dirmngr: Implement command KS_DEL for ldap servers.  [T5447]

  Release-info: https://dev.gnupg.org/T7719


Noteworthy changes in version 2.5.9 (2025-07-10)
------------------------------------------------

  * gpg: Add the revocation reason to the sigclass of a "rev" line.
    Regression in 2.5.7.  [T7073]

  * gpg: Do not show the non-standard secp256k1 curve in the menu to
    select the curve.  It can however be specified using its name.
    [rG49a9171f63]

  * gpg: Fix regression in using the secp256k1 curve.  [T7698]

  * dirmngr: New option --user-agent and send a default User-Agent of
    "GnuPG/2.6" for all HTTP requests.  [T7715]


  Release-info: https://dev.gnupg.org/T7695


Noteworthy changes in version 2.5.8 (2025-06-20)
------------------------------------------------

  * gpg: Show revocation reason with a standard -k listing.  [T7083]

  * gpg: Emit a revocation reason as comment in a "pub" record.
    [T7083]

  * agent: Fix regression in 2.5.7 decrypting with a card based